--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>我们是卖羊肉的大佬，但你只能买猪肉！</h1>
     <h2>我们的猪肉很好吃!</h2>
+    <img src="假装有图片.jpg" alt="假装有图片">
+    <p>猪肉猪肉真好吃!</p>
 </body>
 
 </html>
